[tool.poetry]
name = "topological-connect-four"
version = "0.1.0"
description = ""
authors = ["Alex Wendland <a.p.wendland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.11.0"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
ruff = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
